add subpages, start first question

--- a/index.html
+++ b/index.html
@@ -9,21 +9,90 @@
 <body>
 <div class="navbar">
     <a href="index.html">Содержание</a>
-    <a href="#">Ссылка 1</a>
-    <a href="#">Ссылка 2</a>
-    <a href="#">Ссылка 3</a>
+    <a href="pages/question1.html">Вопрос 1</a>
+    <a href="pages/question2.html">Вопрос 2</a>
+    <a href="pages/question3.html">Вопрос 3</a>
+    <a href="pages/question4.html">Вопрос 4</a>
+    <a href="pages/question5.html">Вопрос 5</a>
+    <a href="pages/question6.html">Вопрос 6</a>
+    <a href="pages/question7.html">Вопрос 7</a>
+    <a href="pages/question8.html">Вопрос 8</a>
+    <a href="pages/question9.html">Вопрос 9</a>
+    <a href="pages/question10.html">Вопрос 10</a>
+    <a href="pages/question11.html">Вопрос 11</a>
+    <a href="pages/question12.html">Вопрос 12</a>
+    <a href="pages/question13.html">Вопрос 13</a>
+    <a href="pages/question14.html">Вопрос 14</a>
+    <a href="pages/question15.html">Вопрос 15</a>
+    <a href="pages/question16.html">Вопрос 16</a>
+    <a href="pages/question17.html">Вопрос 17</a>
+    <a href="pages/question18.html">Вопрос 18</a>
+    <a href="pages/question19.html">Вопрос 19</a>
+    <a href="pages/question20.html">Вопрос 20</a>
 </div>
 <div class="content">
     <div class="header">
-        <h1>САОД: Алгоритмы</h1>
+        <h1>САОД: Теория к зачету</h1>
     </div>
     <div class="main">
         <h4>Содержание</h4>
-        <ul>
-            <li><a href="#">Ссылка 1</a></li>
-            <li><a href="#">Ссылка 2</a></li>
-            <li><a href="#">Ссылка 3</a></li>
-        </ul>
+        <ol>
+            <li><a href="pages/question1.html">Подсчет ссылок в C++. Схема на примере класса строк.
+                Умные указатели в стандартной библиотеке С++, виды и назначения.</a></li>
+            <li><a href="pages/question2.html">Контейнеры стандартной библиотеки C++. Ассоциативные и последовательные.
+                Вычислительная сложность добавления и поиска элемента.</a></li>
+            <li><a href="pages/question3.html">Контейнеры vector и string стандартной библиотеки C++.
+                Вычислительная сложность добавления и выбора элемента по номеру.
+                Управление памятью при добавлении элемента.</a></li>
+            <li><a href="pages/question4.html">Средства отладки и обработки исключения в стандартной библиотеке C++.
+                Класс exception и макрос assert. Их применение для отладки программ и обработки ошибок.</a></li>
+            <li><a href="pages/question5.html">Задачи поиска образца в тексте.  Примеры применения.
+                Типичная сложность “примитивного” поиска. Дерево суффиксов.
+                Вычислительная сложность задач “установить наличие” и “подсчитать количество вхождений” образца
+                в тексте на основе дерева суффиксов.</a></li>
+            <li><a href="pages/question6.html">Задачи поиска образца в тексте. Примеры применения.
+                Типичная сложность “примитивного” поиска. Префикс-функция строки. Сложность вычисления.
+                Алгоритм Кнута-Мориса-Прата.</a></li>
+            <li><a href="pages/question7.html">Задачи поиска образца в тексте. Примеры применения.
+                Типичная сложность “примитивного” поиска. Алгоритм Бойера-Мура. Характеристики алгоритма.
+                Идеи в основе алгоритма. Таблица стоп-символов и таблица суффиксов. Построение на примере.</a></li>
+            <li><a href="pages/question8.html">Задача поиска многих образцов близкой длины в тексте. Применение.
+                Алгоритм Рабина-Карпа. Сложность алгоритма и хеш-функция. Схема поиска многих образцов.
+                Быстрый поиск и проверка кандидатов.</a></li>
+            <li><a href="pages/question9.html">Понятие метрики (расстояния). Метрика Левенштейна для строк.
+                Алгоритм Вагнера-Фишера вычисления расстояния между строками.
+                Вычислительная сложность. Примеры применения.</a></li>
+            <li><a href="pages/question10.html">Метрика Левенштейна для строк.
+                Алгоритм Вагнера-Фишера вычисления расстояния между строками и редакционное предписание.
+                Единственность. Вычислительная сложность. Примеры применения.</a></li>
+            <li><a href="pages/question11.html">Структура данных “Двоичная куча”.
+                Вычислительная сложность добавления и удаления элемента из кучи.
+                Очередь приоритетов. Алгоритм “сортировки кучей” и сравнения его вычислительной сложности
+                с быстрой сортировкой.</a></li>
+            <li><a href="pages/question12.html">Кодирование с целью резервирования значения. Требования к методу.
+                Метод COBS. Алгоритм кодирования и декодирования. Оценка увеличения объема данных.
+                Проблема окончания данных и проблема длинных блоков.</a></li>
+            <li><a href="pages/question13.html">Компрессия данных. Метод RLE. Алгоритм сжатия и восстановления.
+                Варианты распознавания кодов и непосредственно символов.</a></li>
+            <li><a href="pages/question14.html">Компрессия данных. Идея в основе метода Хаффмана.
+                Особенности кодов Хаффмана. Дерево Хаффмана. Алгоритмы построения: дерева по таблице частот,
+                таблицы кодов по дереву, дерева по таблице кодов.</a></li>
+            <li><a href="pages/question15.html">Компрессия данных. Метод сжатия в основе алгоритмов группы
+                Лемпеля-Зива (LZ). Особенность алгоритма LZ77 (LZ1).
+                Алгоритм сжатия и восстановления с “бегущим окном”.</a></li>
+            <li><a href="pages/question16.html">Компрессия данных. Метод сжатия в основе алгоритмов группы
+                Лемпеля-Зива (LZ). Особенность алгоритма LZW. Алгоритм сжатия.</a></li>
+            <li><a href="pages/question17.html">Компрессия данных. Сжатие “с потерями” и “без потерь”
+                области применения. Алгоритм Лемпеля-Зива-Велча (LZW).
+                Алгоритм восстановления данных, пояснение алгоритма в аномалии.</a></li>
+            <li><a href="pages/question18.html">Язык регулярных выражений. Области применения, типичные задачи.
+                Элементы языка регулярных выражений. Группы и обратные ссылки. Пример применения.</a></li>
+            <li><a href="pages/question19.html">Язык регулярных выражений. Области применения, типичные задачи.
+                Элементы языка регулярных выражений. Группы, именованные группы и подстановки.
+                Пример применения.</a></li>
+            <li><a href="pages/question20.html">Указатели на функции, делегаты и лямбда-выражения.
+                LINQ. Философия LINQ. Примеры применения.</a></li>
+        </ol>
     </div>
 </div>
 </body>
