--- a/pages/question10.html
+++ b/pages/question10.html
@@ -22,22 +22,15 @@
   <a href="question11.html">Вопрос 11</a>
   <a href="question12.html">Вопрос 12</a>
   <a href="question13.html">Вопрос 13</a>
-  <a href="question14.html">Вопрос 14</a>
-  <a href="question15.html">Вопрос 15</a>
-  <a href="question16.html">Вопрос 16</a>
-  <a href="question17.html">Вопрос 17</a>
-  <a href="question18.html">Вопрос 18</a>
-  <a href="question19.html">Вопрос 19</a>
-  <a href="question20.html">Вопрос 20</a>
 </div>
 <div class="content">
   <div class="header">
     <h1>Вопрос 10</h1>
   </div>
   <div class="main">
-    <h4>Метрика Левенштейна для строк.
-      Алгоритм Вагнера-Фишера вычисления расстояния между строками и редакционное предписание.
-      Единственность. Вычислительная сложность. Примеры применения.</h4>
+    <h4>Компрессия данных. Идея в основе метода Хаффмана.
+      Особенности кодов Хаффмана. Дерево Хаффмана. Алгоритмы построения: дерева по таблице частот,
+      таблицы кодов по дереву, дерева по таблице кодов.</h4>
 
   </div>
 </div>
