--- a/pages/question12.html
+++ b/pages/question12.html
@@ -22,22 +22,14 @@
   <a href="question11.html">Вопрос 11</a>
   <a href="question12.html">Вопрос 12</a>
   <a href="question13.html">Вопрос 13</a>
-  <a href="question14.html">Вопрос 14</a>
-  <a href="question15.html">Вопрос 15</a>
-  <a href="question16.html">Вопрос 16</a>
-  <a href="question17.html">Вопрос 17</a>
-  <a href="question18.html">Вопрос 18</a>
-  <a href="question19.html">Вопрос 19</a>
-  <a href="question20.html">Вопрос 20</a>
 </div>
 <div class="content">
   <div class="header">
     <h1>Вопрос 12</h1>
   </div>
   <div class="main">
-    <h4>Кодирование с целью резервирования значения. Требования к методу.
-      Метод COBS. Алгоритм кодирования и декодирования. Оценка увеличения объема данных.
-      Проблема окончания данных и проблема длинных блоков.</h4>
+    <h4>Компрессия данных. Метод сжатия в основе алгоритмов группы
+      Лемпеля-Зива (LZ). Особенность алгоритма LZW. Алгоритм сжатия.</h4>
 
   </div>
 </div>
