--- a/pages/question13.html
+++ b/pages/question13.html
@@ -22,21 +22,15 @@
   <a href="question11.html">Вопрос 11</a>
   <a href="question12.html">Вопрос 12</a>
   <a href="question13.html">Вопрос 13</a>
-  <a href="question14.html">Вопрос 14</a>
-  <a href="question15.html">Вопрос 15</a>
-  <a href="question16.html">Вопрос 16</a>
-  <a href="question17.html">Вопрос 17</a>
-  <a href="question18.html">Вопрос 18</a>
-  <a href="question19.html">Вопрос 19</a>
-  <a href="question20.html">Вопрос 20</a>
 </div>
 <div class="content">
   <div class="header">
     <h1>Вопрос 13</h1>
   </div>
   <div class="main">
-    <h4>Компрессия данных. Метод RLE. Алгоритм сжатия и восстановления.
-      Варианты распознавания кодов и непосредственно символов.</h4>
+    <h4>Компрессия данных. Сжатие “с потерями” и “без потерь”
+      области применения. Алгоритм Лемпеля-Зива-Велча (LZW).
+      Алгоритм восстановления данных, пояснение алгоритма в аномалии.</h4>
 
   </div>
 </div>
