--- a/pages/question2.html
+++ b/pages/question2.html
@@ -22,21 +22,16 @@
   <a href="question11.html">Вопрос 11</a>
   <a href="question12.html">Вопрос 12</a>
   <a href="question13.html">Вопрос 13</a>
-  <a href="question14.html">Вопрос 14</a>
-  <a href="question15.html">Вопрос 15</a>
-  <a href="question16.html">Вопрос 16</a>
-  <a href="question17.html">Вопрос 17</a>
-  <a href="question18.html">Вопрос 18</a>
-  <a href="question19.html">Вопрос 19</a>
-  <a href="question20.html">Вопрос 20</a>
 </div>
 <div class="content">
   <div class="header">
     <h1>Вопрос 2</h1>
   </div>
   <div class="main">
-    <h4>Контейнеры стандартной библиотеки C++. Ассоциативные и последовательные.
-      Вычислительная сложность добавления и поиска элемента.</h4>
+    <h4>Задачи поиска образца в тексте. Примеры применения.
+      Типичная сложность “примитивного” поиска. Префикс-функция строки. Сложность вычисления.
+      Алгоритм Кнута-Мориса-Прата.</h4>
+
   </div>
 </div>
 </body>
