--- a/pages/question7.html
+++ b/pages/question7.html
@@ -22,22 +22,16 @@
   <a href="question11.html">Вопрос 11</a>
   <a href="question12.html">Вопрос 12</a>
   <a href="question13.html">Вопрос 13</a>
-  <a href="question14.html">Вопрос 14</a>
-  <a href="question15.html">Вопрос 15</a>
-  <a href="question16.html">Вопрос 16</a>
-  <a href="question17.html">Вопрос 17</a>
-  <a href="question18.html">Вопрос 18</a>
-  <a href="question19.html">Вопрос 19</a>
-  <a href="question20.html">Вопрос 20</a>
 </div>
 <div class="content">
   <div class="header">
     <h1>Вопрос 7</h1>
   </div>
   <div class="main">
-    <h4>Задачи поиска образца в тексте. Примеры применения.
-      Типичная сложность “примитивного” поиска. Алгоритм Бойера-Мура. Характеристики алгоритма.
-      Идеи в основе алгоритма. Таблица стоп-символов и таблица суффиксов. Построение на примере.</h4>
+    <h4>Структура данных “Двоичная куча”.
+      Вычислительная сложность добавления и удаления элемента из кучи.
+      Очередь приоритетов. Алгоритм “сортировки кучей” и сравнения его вычислительной сложности
+      с быстрой сортировкой.</h4>
 
   </div>
 </div>
