--- a/pages/question15.html
+++ b/pages/question15.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Вопрос 13</title>
+  <title>Вопрос 15</title>
   <link rel="stylesheet" href="../static/css/styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
@@ -27,11 +27,14 @@
 </div>
 <div class="content">
   <div class="header">
-    <h1>Вопрос 13</h1>
+    <h1>Вопрос 15</h1>
   </div>
   <div class="main">
-    <h4>Метрика Левенштейна</h4>
-    <p>(4 лекция/61)</p>
+    <h4>Метод сжатия без потерь</h4>
+    <h6>Метод и коды Хаффмана</h6>
+    <h6>Метод RLE</h6>
+    <h6>Метод Барроуза-Виллера</h6>
+    <p></p>
   </div>
 </div>
 </body>
