--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
     <a href="pages/question3.html">Вопрос 3</a>
     <a href="pages/question4.html">Вопрос 4</a>
     <a href="pages/question5.html">Вопрос 5</a>
-    <a href="pages/question6.html">Вопрос 6</a>
-    <a href="pages/question7.html">Вопрос 7</a>
-    <a href="pages/question8.html">Вопрос 8</a>
+    <a href="pages/question4.html">Вопрос 6</a>
+    <a href="pages/question5.html">Вопрос 7</a>
+    <a href="pages/question6.html">Вопрос 8</a>
     <a href="pages/question9.html">Вопрос 9</a>
     <a href="pages/question10.html">Вопрос 10</a>
-    <a href="pages/question11.html">Вопрос 11</a>
-    <a href="pages/question12.html">Вопрос 12</a>
-    <a href="pages/question13.html">Вопрос 13</a>
+    <a href="pages/question7.html">Вопрос 11</a>
+    <a href="pages/question8.html">Вопрос 12</a>
+    <a href="pages/question9.html">Вопрос 13</a>
+    <a href="pages/question10.html">Вопрос 14</a>
+    <a href="pages/question11.html">Вопрос 15</a>
+    <a href="pages/question16.html">Вопрос 16</a>
+    <a href="pages/question12.html">Вопрос 17</a>
 </div>
 <div class="content">
     <div class="header">
@@ -30,45 +34,24 @@
     <div class="main">
         <h4>Содержание</h4>
         <ol>
-            <li><a href="pages/question1.html">Задачи поиска образца в тексте.  Примеры применения.
-                Типичная сложность “примитивного” поиска. Дерево суффиксов.
-                Вычислительная сложность задач “установить наличие” и “подсчитать количество вхождений” образца
-                в тексте на основе дерева суффиксов.</a></li>
-            <li><a href="pages/question2.html">Задачи поиска образца в тексте. Примеры применения.
-                Типичная сложность “примитивного” поиска. Префикс-функция строки. Сложность вычисления.
-                Алгоритм Кнута-Мориса-Прата.</a></li>
-            <li><a href="pages/question3.html">Задачи поиска образца в тексте. Примеры применения.
-                Типичная сложность “примитивного” поиска. Алгоритм Бойера-Мура. Характеристики алгоритма.
-                Идеи в основе алгоритма. Таблица стоп-символов и таблица суффиксов. Построение на примере.</a></li>
-            <li><a href="pages/question4.html">Задача поиска многих образцов близкой длины в тексте. Применение.
-                Алгоритм Рабина-Карпа. Сложность алгоритма и хеш-функция. Схема поиска многих образцов.
-                Быстрый поиск и проверка кандидатов.</a></li>
-            <li><a href="pages/question5.html">Понятие метрики (расстояния). Метрика Левенштейна для строк.
-                Алгоритм Вагнера-Фишера вычисления расстояния между строками.
-                Вычислительная сложность. Примеры применения.</a></li>
-            <li><a href="pages/question6.html">Метрика Левенштейна для строк.
-                Алгоритм Вагнера-Фишера вычисления расстояния между строками и редакционное предписание.
-                Единственность. Вычислительная сложность. Примеры применения.</a></li>
-            <li><a href="pages/question7.html">Структура данных “Двоичная куча”.
-                Вычислительная сложность добавления и удаления элемента из кучи.
-                Очередь приоритетов. Алгоритм “сортировки кучей” и сравнения его вычислительной сложности
-                с быстрой сортировкой.</a></li>
-            <li><a href="pages/question8.html">Кодирование с целью резервирования значения. Требования к методу.
-                Метод COBS. Алгоритм кодирования и декодирования. Оценка увеличения объема данных.
-                Проблема окончания данных и проблема длинных блоков.</a></li>
-            <li><a href="pages/question9.html">Компрессия данных. Метод RLE. Алгоритм сжатия и восстановления.
-                Варианты распознавания кодов и непосредственно символов.</a></li>
-            <li><a href="pages/question10.html">Компрессия данных. Идея в основе метода Хаффмана.
-                Особенности кодов Хаффмана. Дерево Хаффмана. Алгоритмы построения: дерева по таблице частот,
-                таблицы кодов по дереву, дерева по таблице кодов.</a></li>
-            <li><a href="pages/question11.html">Компрессия данных. Метод сжатия в основе алгоритмов группы
-                Лемпеля-Зива (LZ). Особенность алгоритма LZ77 (LZ1).
-                Алгоритм сжатия и восстановления с “бегущим окном”.</a></li>
-            <li><a href="pages/question12.html">Компрессия данных. Метод сжатия в основе алгоритмов группы
-                Лемпеля-Зива (LZ). Особенность алгоритма LZW. Алгоритм сжатия.</a></li>
-            <li><a href="pages/question13.html">Компрессия данных. Сжатие “с потерями” и “без потерь”
-                области применения. Алгоритм Лемпеля-Зива-Велча (LZW).
-                Алгоритм восстановления данных, пояснение алгоритма в аномалии.</a></li>
+            <li><a href="pages/question1.html">Алгоритм Вагнера-Фишера</a></li>
+            <li><a href="pages/question2.html">Алгоритм Ukkonen’а</a></li>
+            <li><a href="pages/question3.html">Алгоритм bitap</a></li>
+            <li><a href="pages/question4.html">Алгоритм поиска количества различных подстрок
+                строки S на основе префикс-функции</a></li>
+            <li><a href="pages/question5.html">Алгоритм вычисления префикс-функции, который имеет сложность O(N),
+                где N – длина строки</a></li>
+            <li><a href="pages/question6.html">Алгоритмы LZ</a></li>
+            <li><a href="pages/question7.html">Метод резервирования кода COBS (исключение символов)</a></li>
+            <li><a href="pages/question8.html">Алгоритм Кнута-Морриса-Пратта</a></li>
+            <li><a href="pages/question9.html">Алгоритм поиска образца в тексте с использованием
+                дерева суффиксов</a></li>
+            <li><a href="pages/question10.html">Алгоритм Бойера-Мура</a></li>
+            <li><a href="pages/question11.html">Алгоритм Рабина-Карпа</a></li>
+            <li><a href="pages/question12.html">Алгоритмы Хэширования. Кольцевые алгоритмы хэширования</a></li>
+            <li><a href="pages/question13.html">Метрика Левенштейна</a></li>
+            <li><a href="pages/question14.html">Алгоритм Дейкстры</a></li>
+            <li><a href="pages/question15.html">Алгоритм Сжатия без потерь</a></li>
         </ol>
     </div>
 </div>
