--- a/pages/question12.html
+++ b/pages/question12.html
@@ -14,23 +14,24 @@
   <a href="question3.html">Вопрос 3</a>
   <a href="question4.html">Вопрос 4</a>
   <a href="question5.html">Вопрос 5</a>
-  <a href="question6.html">Вопрос 6</a>
-  <a href="question7.html">Вопрос 7</a>
-  <a href="question8.html">Вопрос 8</a>
+  <a href="question4.html">Вопрос 6</a>
+  <a href="question5.html">Вопрос 7</a>
+  <a href="question6.html">Вопрос 8</a>
   <a href="question9.html">Вопрос 9</a>
   <a href="question10.html">Вопрос 10</a>
   <a href="question11.html">Вопрос 11</a>
   <a href="question12.html">Вопрос 12</a>
   <a href="question13.html">Вопрос 13</a>
+  <a href="question14.html">Вопрос 14</a>
+  <a href="question15.html">Вопрос 15</a>
 </div>
 <div class="content">
   <div class="header">
     <h1>Вопрос 12</h1>
   </div>
   <div class="main">
-    <h4>Компрессия данных. Метод сжатия в основе алгоритмов группы
-      Лемпеля-Зива (LZ). Особенность алгоритма LZW. Алгоритм сжатия.</h4>
-
+    <h4>Алгоритмы Хэширования</h4>
+    <p>(4 лекция/58 страница)</p>
   </div>
 </div>
 </body>
