--- a/pages/question9.html
+++ b/pages/question9.html
@@ -14,22 +14,24 @@
   <a href="question3.html">Вопрос 3</a>
   <a href="question4.html">Вопрос 4</a>
   <a href="question5.html">Вопрос 5</a>
-  <a href="question6.html">Вопрос 6</a>
-  <a href="question7.html">Вопрос 7</a>
-  <a href="question8.html">Вопрос 8</a>
+  <a href="question4.html">Вопрос 6</a>
+  <a href="question5.html">Вопрос 7</a>
+  <a href="question6.html">Вопрос 8</a>
   <a href="question9.html">Вопрос 9</a>
   <a href="question10.html">Вопрос 10</a>
   <a href="question11.html">Вопрос 11</a>
   <a href="question12.html">Вопрос 12</a>
   <a href="question13.html">Вопрос 13</a>
+  <a href="question14.html">Вопрос 14</a>
+  <a href="question15.html">Вопрос 15</a>
 </div>
 <div class="content">
   <div class="header">
     <h1>Вопрос 9</h1>
   </div>
   <div class="main">
-    <h4>Компрессия данных. Метод RLE. Алгоритм сжатия и восстановления.
-      Варианты распознавания кодов и непосредственно символов.</h4>
+    <h4>Алгоритм поиска образца в тексте с использованием
+      дерева суффиксов</h4>
 
   </div>
 </div>
