add theory (generated)

--- a/pages/question1.html
+++ b/pages/question1.html
@@ -1,37 +1,96 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Вопрос 1</title>
-  <link rel="stylesheet" href="../static/css/styles.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <title>Вопрос 1</title>
+    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
 <div class="navbar">
-  <a href="../index.html">Содержание</a>
-  <a href="question1.html">Вопрос 1</a>
-  <a href="question2.html">Вопрос 2</a>
-  <a href="question3.html">Вопрос 3</a>
-  <a href="question4.html">Вопрос 4</a>
-  <a href="question5.html">Вопрос 5</a>
-  <a href="question4.html">Вопрос 6</a>
-  <a href="question5.html">Вопрос 7</a>
-  <a href="question6.html">Вопрос 8</a>
-  <a href="question9.html">Вопрос 9</a>
-  <a href="question10.html">Вопрос 10</a>
-  <a href="question11.html">Вопрос 11</a>
-  <a href="question12.html">Вопрос 12</a>
-  <a href="question13.html">Вопрос 13</a>
-  <a href="question14.html">Вопрос 14</a>
-  <a href="question15.html">Вопрос 15</a>
+    <a href="../index.html">Содержание</a>
+    <a href="question1.html">Вопрос 1</a>
+    <a href="question2.html">Вопрос 2</a>
+    <a href="question3.html">Вопрос 3</a>
+    <a href="question4.html">Вопрос 4</a>
+    <a href="question5.html">Вопрос 5</a>
+    <a href="question4.html">Вопрос 6</a>
+    <a href="question5.html">Вопрос 7</a>
+    <a href="question6.html">Вопрос 8</a>
+    <a href="question9.html">Вопрос 9</a>
+    <a href="question10.html">Вопрос 10</a>
+    <a href="question11.html">Вопрос 11</a>
+    <a href="question12.html">Вопрос 12</a>
+    <a href="question13.html">Вопрос 13</a>
+    <a href="question14.html">Вопрос 14</a>
+    <a href="question15.html">Вопрос 15</a>
 </div>
 <div class="content">
-  <div class="header">
-    <h1>Вопрос 1</h1>
-  </div>
-  <div class="main">
-    <h4>Алгоритм Вагнера-Фишера</h4>
-  </div>
+    <div class="header">
+        <h1>Вопрос 1</h1>
+    </div>
+    <div class="main">
+        <h4>Алгоритм Вагнера-Фишера (дополнить)</h4>
+        <p>Алгоритм Вагнера-Фишера (также известный как алгоритм динамического программирования для поиска редакционного
+            расстояния) является классическим методом для измерения сходства между двумя строками. Он был предложен в
+            1974 году Робертом Вагнером и Майклом Фишером.</p>
+
+        <p>Целью алгоритма Вагнера-Фишера является нахождение минимального количества операций (вставки, удаления и
+            замены символов), необходимых для превращения одной строки в другую. Это расстояние, известное как
+            редакционное расстояние или расстояние Левенштейна, может быть использовано для сравнения и классификации
+            строк в различных областях, таких как автоматическая коррекция орфографии, компьютерная лингвистика и
+            биоинформатика.</p>
+
+        <p>Алгоритм Вагнера-Фишера работает по принципу динамического программирования, разбивая задачу на более мелкие
+            подзадачи и сохраняя результаты для последующего использования. Он строит матрицу размером (m+1) на (n+1),
+            где m и n - длины сравниваемых строк, и заполняет её пошагово. Каждая ячейка матрицы представляет собой
+            минимальное расстояние между соответствующими подстроками исходных строк.</p>
+
+        <p>Давайте рассмотрим пример для сравнения строк "кот" и "скот". Матрица размером 4x5 будет выглядеть следующим
+            образом:</p>
+
+        <pre>
+    |   | 0 | 1 | 2 | 3 | 4 |
+    |---|---|---|---|---|---|
+    |   |   | с | к | о | т |
+    | 0 | 0 | 1 | 2 | 3 | 4 |
+    | к | 1 |   |   |   |   |
+    | о | 2 |   |   |   |   |
+    | т | 3 |   |   |   |   |
+  </pre>
+
+        <p>В каждой ячейке матрицы мы будем вычислять минимальное расстояние между соответствующими подстроками. Для
+            этого мы будем использовать следующие операции:</p>
+        <ul>
+            <li>Вставка: увеличение индекса строки, но оставление индекса столбца неизменным.</li>
+            <li>Удаление: увеличение индекса столбца, но оставление индекса строки неизменным.</li>
+            <li>Замена: увеличение индексов обоих строки и столбца, если символы в текущих позициях отличаются.</li>
+            <li>Совпадение: оставление индексов строки и столбца неизменными, если символы в текущих позициях
+                совпадают.
+            </li>
+        </ul>
+
+        <p>Итак, чтобы заполнить матрицу, начнем со значения 0 в верхнем левом углу. Затем будем последовательно
+            обновлять значения ячеек в каждой строке и столбце, исходя из операций, описанных выше. Продолжим этот
+            процесс до заполнения всей матрицы.</p>
+
+        <pre>
+    |   | 0 | 1 | 2 | 3 | 4 |
+    |---|---|---|---|---|---|
+    |   |   | с | к | о | т |
+    | 0 | 0 | 1 | 2 | 3 | 4 |
+    | к | 1 | 1 | 1 | 2 | 3 |
+    | о | 2 | 2 | 2 | 1 | 2 |
+    | т | 3 | 3 | 3 | 2 | 1 |
+  </pre>
+
+        <p>В правом нижнем углу матрицы мы получаем минимальное редакционное расстояние равное 1. Это означает, что для
+            превращения строки "кот" в строку "скот" требуется выполнить одну операцию - замену символа 'к' на 'с'.</p>
+
+        <p>Алгоритм Вагнера-Фишера является эффективным и широко используемым инструментом для сравнения и анализа
+            строк. Он имеет множество вариаций и может быть расширен для решения других задач, связанных с обработкой
+            текста и данных.</p>
+    </div>
 </div>
 </body>
 </html>
