--- a/pages/question6.html
+++ b/pages/question6.html
@@ -1,40 +1,211 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Вопрос 6</title>
-  <link rel="stylesheet" href="../static/css/styles.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <title>Вопрос 6</title>
+    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
 <div class="navbar">
-  <a href="../index.html">Содержание</a>
-  <a href="question1.html">Вопрос 1</a>
-  <a href="question2.html">Вопрос 2</a>
-  <a href="question3.html">Вопрос 3</a>
-  <a href="question4.html">Вопрос 4</a>
-  <a href="question5.html">Вопрос 5</a>
-  <a href="question4.html">Вопрос 6</a>
-  <a href="question5.html">Вопрос 7</a>
-  <a href="question6.html">Вопрос 8</a>
-  <a href="question9.html">Вопрос 9</a>
-  <a href="question10.html">Вопрос 10</a>
-  <a href="question11.html">Вопрос 11</a>
-  <a href="question12.html">Вопрос 12</a>
-  <a href="question13.html">Вопрос 13</a>
-  <a href="question14.html">Вопрос 14</a>
-  <a href="question15.html">Вопрос 15</a>
+    <a href="../index.html">Содержание</a>
+    <a href="question1.html">Вопрос 1</a>
+    <a href="question2.html">Вопрос 2</a>
+    <a href="question3.html">Вопрос 3</a>
+    <a href="question4.html">Вопрос 4</a>
+    <a href="question5.html">Вопрос 5</a>
+    <a href="question4.html">Вопрос 6</a>
+    <a href="question5.html">Вопрос 7</a>
+    <a href="question6.html">Вопрос 8</a>
+    <a href="question9.html">Вопрос 9</a>
+    <a href="question10.html">Вопрос 10</a>
+    <a href="question11.html">Вопрос 11</a>
+    <a href="question12.html">Вопрос 12</a>
+    <a href="question13.html">Вопрос 13</a>
+    <a href="question14.html">Вопрос 14</a>
+    <a href="question15.html">Вопрос 15</a>
 </div>
 <div class="content">
-  <div class="header">
-    <h1>Вопрос 6</h1>
-  </div>
-  <div class="main">
-    <h4>Алгоритмы LZ</h4>
-    <h6>Метод LZW</h6>
-    <h6>Метод LZ77</h6>
+    <div class="header">
+        <h1>Вопрос 6</h1>
+    </div>
+    <div class="main">
+        <h4>Алгоритмы LZ (LZ77 и LZW)</h4>
+        <p>Алгоритмы LZ, такие как LZ77 и LZW, являются алгоритмами сжатия без потерь, которые широко применяются в
+            области сжатия данных и хранения информации. Они были разработаны Абрахамом Лемпелем и Якобом Зивом в 1977
+            году и позднее усовершенствованы.</p>
 
-  </div>
+        <h6>Алгоритм LZ77</h6>
+        <p>Алгоритм LZ77 использует словарь для замены повторяющихся фрагментов данных. Он осуществляет сжатие путем
+            представления повторяющихся фрагментов в виде пар (смещение, длина) внутри словаря.</p>
+
+        <p>Рассмотрим пример алгоритма LZ77 на строке "ABABABA". Для начала создадим пустой словарь и инициализируем его
+            первыми двумя символами строки.</p>
+
+        <pre>
+    Исходная строка: ABABABA
+    Словарь: A, B
+    Сжатие:
+  </pre>
+
+        <p>1. Первый символ "A" не находится в словаре, поэтому он добавляется в словарь, и сжатие остается пустым.</p>
+
+        <pre>
+    Исходная строка: ABABABA
+    Словарь: A, B
+    Сжатие:
+  </pre>
+
+        <p>2. Второй символ "B" также не находится в словаре, поэтому он добавляется в словарь, и сжатие остается
+            пустым.</p>
+
+        <pre>
+    Исходная строка: ABABABA
+    Словарь: A, B
+    Сжатие:
+  </pre>
+
+        <p>3. Третий символ "A" уже находится в словаре, поэтому мы ищем самую длинную подстроку, начинающуюся с этого
+            символа, которая уже есть в словаре. В данном случае, такой подстрокой является "ABA" (смещение = 1, длина =
+            3). Мы добавляем пару (1, 3) в сжатие и продолжаем с четвертого символа.</p>
+
+        <pre>
+    Исходная строка: ABABABA
+    Словарь: A, B, ABA
+    Сжатие: (1, 3)
+  </pre>
+
+        <p>4. Четвертый символ "B" уже находится в словаре, и самая длинная повторяющаяся подстрока, начинающаяся с
+            этого символа, является "ABA" (смещение = 1, длина = 3). Мы добавляем пару (1, 3) в сжатие и продолжаем с
+            пятого символа.</p>
+
+        <pre>
+    Исходная строка: ABABABA
+    Словарь: A, B, ABA
+    Сжатие: (1, 3), (1, 3)
+  </pre>
+
+        <p>5. Пятый символ "B" уже находится в словаре, и самая длинная повторяющаяся подстрока, начинающаяся с этого
+            символа, является "ABAB" (смещение = 2, длина = 4). Мы добавляем пару (2, 4) в сжатие и продолжаем с шестого
+            символа.</p>
+
+        <pre>
+    Исходная строка: ABABABA
+    Словарь: A, B, ABA, ABAB
+    Сжатие: (1, 3), (1, 3), (2, 4)
+  </pre>
+
+        <p>6. Шестой символ "A" уже находится в словаре, и самая длинная повторяющаяся подстрока, начинающаяся с этого
+            символа, является "ABABA" (смещение = 2, длина = 5). Мы добавляем пару (2, 5) в сжатие и продолжаем с
+            седьмого символа.</p>
+
+        <pre>
+    Исходная строка: ABABABA
+    Словарь: A, B, ABA, ABAB, ABABA
+    Сжатие: (1, 3), (1, 3), (2, 4), (2, 5)
+  </pre>
+
+        <p>7. Седьмой символ "B" уже находится в словаре, и самая длинная повторяющаяся подстрока, начинающаяся с этого
+            символа, является "ABAB" (смещение = 3, длина = 4). Мы добавляем пару (3, 4) в сжатие.</p>
+
+        <pre>
+    Исходная строка: ABABABA
+    Словарь: A, B, ABA, ABAB, ABABA
+    Сжатие: (1, 3), (1, 3), (2, 4), (2, 5), (3, 4)
+  </pre>
+
+        <p>Таким образом, сжатие алгоритмом LZ77 для строки "ABABABA" будет состоять из пар (смещение, длина): (1, 3),
+            (1, 3), (2, 4), (2, 5), (3, 4).</p>
+
+        <h6>Алгоритм LZW</h6>
+        <p>Алгоритм LZW является улучшенной версией алгоритма LZ77. Он также использует словарь, но добавляет новые
+            фразы в словарь при сжатии, а не только заменяет повторяющиеся фрагменты.</p>
+
+        <p>Рассмотрим пример алгоритма LZW на строке "ABABABA". Для начала создадим пустой словарь и инициализируем его
+            однобуквенными символами.</p>
+
+        <pre>
+    Исходная строка: ABABABA
+    Словарь: A, B
+    Сжатие:
+  </pre>
+
+        <p>1. Первый символ "A" не находится в словаре, поэтому мы добавляем его в словарь и оставляем сжатие
+            пустым.</p>
+
+        <pre>
+    Исходная строка: ABABABA
+    Словарь: A, B
+    Сжатие:
+  </pre>
+
+        <p>2. Второй символ "B" также не находится в словаре, поэтому мы добавляем его в словарь и оставляем сжатие
+            пустым.</p>
+
+        <pre>
+    Исходная строка: ABABABA
+    Словарь: A, B
+    Сжатие:
+  </pre>
+
+        <p>3. Третий символ "A" уже находится в словаре, поэтому мы добавляем его к текущей фразе и переходим к
+            следующему символу.</p>
+
+        <pre>
+    Исходная строка: ABABABA
+    Словарь: A, B
+    Сжатие:
+    Текущая фраза: A
+  </pre>
+
+        <p>4. Четвертый символ "B" уже находится в словаре, поэтому мы добавляем его к текущей фразе и переходим к
+            следующему символу.</p>
+
+        <pre>
+    Исходная строка: ABABABA
+    Словарь: A, B
+    Сжатие:
+    Текущая фраза: AB
+  </pre>
+
+        <p>5. Пятый символ "A" уже находится в словаре, поэтому мы добавляем текущую фразу "AB" к сжатию и устанавливаем
+            текущую фразу равной "A".</p>
+
+        <pre>
+    Исходная строка: ABABABA
+    Словарь: A, B, AB
+    Сжатие: AB
+    Текущая фраза: A
+  </pre>
+
+        <p>6. Шестой символ "B" уже находится в словаре, поэтому мы добавляем текущую фразу "A" к сжатию и устанавливаем
+            текущую фразу равной "B".</p>
+
+        <pre>
+    Исходная строка: ABABABA
+    Словарь: A, B, AB
+    Сжатие: AB, A
+    Текущая фраза: B
+  </pre>
+
+        <p>7. Седьмой символ "A" уже находится в словаре, поэтому мы добавляем текущую фразу "B" к сжатию и
+            устанавливаем текущую фразу равной "A".</p>
+
+        <pre>
+    Исходная строка: ABABABA
+    Словарь: A, B, AB
+    Сжатие: AB, A, B
+    Текущая фраза: A
+  </pre>
+
+        <p>Таким образом, сжатие алгоритмом LZW для строки "ABABABA" будет состоять из последовательности символов: AB,
+            A, B, A.</p>
+
+        <p>Алгоритмы LZ77 и LZW являются эффективными методами сжатия данных. Они позволяют уменьшить размер данных,
+            сохраняя при этом информацию о повторяющихся фрагментах. Оба алгоритма широко используются в области сжатия
+            текстовых и графических данных, а также в архивации и других приложениях.</p>
+
+    </div>
 </div>
 </body>
 </html>
