add theory (generated)

--- a/pages/question13.html
+++ b/pages/question13.html
@@ -1,38 +1,50 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Вопрос 13</title>
-  <link rel="stylesheet" href="../static/css/styles.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <title>Вопрос 13</title>
+    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
 <div class="navbar">
-  <a href="../index.html">Содержание</a>
-  <a href="question1.html">Вопрос 1</a>
-  <a href="question2.html">Вопрос 2</a>
-  <a href="question3.html">Вопрос 3</a>
-  <a href="question4.html">Вопрос 4</a>
-  <a href="question5.html">Вопрос 5</a>
-  <a href="question4.html">Вопрос 6</a>
-  <a href="question5.html">Вопрос 7</a>
-  <a href="question6.html">Вопрос 8</a>
-  <a href="question9.html">Вопрос 9</a>
-  <a href="question10.html">Вопрос 10</a>
-  <a href="question11.html">Вопрос 11</a>
-  <a href="question12.html">Вопрос 12</a>
-  <a href="question13.html">Вопрос 13</a>
-  <a href="question14.html">Вопрос 14</a>
-  <a href="question15.html">Вопрос 15</a>
+    <a href="../index.html">Содержание</a>
+    <a href="question1.html">Вопрос 1</a>
+    <a href="question2.html">Вопрос 2</a>
+    <a href="question3.html">Вопрос 3</a>
+    <a href="question4.html">Вопрос 4</a>
+    <a href="question5.html">Вопрос 5</a>
+    <a href="question4.html">Вопрос 6</a>
+    <a href="question5.html">Вопрос 7</a>
+    <a href="question6.html">Вопрос 8</a>
+    <a href="question9.html">Вопрос 9</a>
+    <a href="question10.html">Вопрос 10</a>
+    <a href="question11.html">Вопрос 11</a>
+    <a href="question12.html">Вопрос 12</a>
+    <a href="question13.html">Вопрос 13</a>
+    <a href="question14.html">Вопрос 14</a>
+    <a href="question15.html">Вопрос 15</a>
 </div>
 <div class="content">
-  <div class="header">
-    <h1>Вопрос 13</h1>
-  </div>
-  <div class="main">
-    <h4>Метрика Левенштейна</h4>
-    <p>(4 лекция/61)</p>
-  </div>
+    <div class="header">
+        <h1>Вопрос 13</h1>
+    </div>
+    <div class="main">
+        <h4>Метрика Левенштейна</h4>
+        <p>
+            Метрика Левенштейна, также известная как редакционное расстояние, является метрикой сходства между двумя
+            строковыми последовательностями. Она определяет минимальное количество операций вставки, удаления и замены
+            символов, необходимых для преобразования одной строки в другую. Операции:</p>
+        <ul>
+            <li>Вставка: операция добавления нового символа в строку на определенной позиции.</li>
+            <li>Удаление: операция удаления символа из строки на определенной позиции.</li>
+            <li>Замена: операция замены одного символа в строке на другой.</li>
+        </ul>
+        <p>
+            Например, для строк "кот" и "скотина" расстояние Левенштейна равно 4, так как необходимо выполнить 2 вставки
+            ("с" и "и"), 1 удаление ("к") и 1 замену ("т" на "н").
+        </p>
+    </div>
 </div>
 </body>
 </html>
