done 7 and 9 questions

--- a/pages/question7.html
+++ b/pages/question7.html
@@ -31,6 +31,28 @@
   </div>
   <div class="main">
     <h4>Метод резервирования кода COBS (исключение символов)</h4>
+    <p>
+      Процесс кодирования COBS начинается с разбиения данных на фрагменты фиксированной длины.
+      Затем каждый фрагмент кодируется следующим образом:
+      Если в фрагменте нет символов "0", то он кодируется как есть.
+      Если в фрагменте есть символ "0", то фрагмент разбивается на несколько подфрагментов,
+      каждый из которых заканчивается символом "0". Каждый подфрагмент, кроме последнего,
+      кодируется с добавлением одного байта, содержащего количество байтов в подфрагменте.
+      Последний подфрагмент кодируется без добавления байта длины.
+      Пример кодирования строки "hello, world!" с помощью COBS:
+      Разбиваем строку на фрагменты фиксированной длины (например, по 5 символов): "hello", ", wor", "ld!".
+      Кодируем каждый фрагмент:
+      "hello" кодируется как есть.
+      ", wor" разбивается на два подфрагмента: ", wor" и "0".
+      Первый подфрагмент кодируется с добавлением одного байта длины (4): "\x05, wor".
+      Второй подфрагмент кодируется без добавления байта длины: "\x00".
+      "ld!" разбивается на два подфрагмента: "ld" и "!".
+      Первый подфрагмент кодируется с добавлением одного байта длины (2): "\x02ld".
+      Второй подфрагмент кодируется без добавления байта длины: "\x00!".
+      Склеиваем закодированные фрагменты: "hello\x05, wor\x00\x02ld\x00!".
+      Преимуществом метода COBS является то, что он позволяет передавать данные без
+      использования символов конца сообщения, что уменьшает вероятность ошибок при передаче данных.
+    </p>
 
   </div>
 </div>
